2002-10-19  Adam Fedor  <fedor@gnu.org>

	* objc-exp.y (name_not_typename): Fix invalid comment.	

2002-10-20  Mark Kettenis  <kettenis@gnu.org>

	* solib-sunos.c (allocate_rt_common_objfile): Use bcache_xmalloc
	to allocate partial syms and macro byte caches.

2002-10-18  David Carlton  <carlton@math.stanford.edu>

	* symtab.h: Delete 'struct source' and 'struct sourcevector'.

2002-10-18  Adam Fedor  <fedor@gnu.org>

	* stabsread.c (find_name_end): New function.
	(define_symbol): Use it.

2002-10-18  Daniel Jacobowitz  <drow@mvista.com>

	* config/alpha/nm-fbsd.h (CANNOT_STEP_BREAKPOINT): Define to 1.
	* config/alpha/nm-linux.h (CANNOT_STEP_BREAKPOINT): Define to 1.
	* config/alpha/nm-nbsd.h (CANNOT_STEP_BREAKPOINT): Define to 1.
	* config/alpha/nm-osf.h (CANNOT_STEP_BREAKPOINT): Define to 1.

2002-10-17  David Carlton  <carlton@math.stanford.edu>

	* symfile.h: Add opaque declaration for struct obstack.
	Declare obsavestring to take a const char *.
	* symfile.c (obsavestring): Make first argument a const char *.

2002-10-16  Adam Fedor  <fedor@gnu.org>

	* breakpoint.c (parse_breakpoint_sals): Ignore ObjC method
	names when matching breakpoints in current file.

2002-10-16  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2read.c (dwarf2_invalid_pointer_size): New complaint.
	(read_tag_pointer_type): Add address class support.
	* gdbarch.sh (ADDRESS_CLASS_TYPE_FLAGS)
	(ADDRESS_CLASS_TYPE_FLAGS_TO_NAME, ADDRESS_CLASS_NAME_TO_TYPE_FLAGS):
	New methods.
	* gdbarch.h, gdbarch.c: Regenerate.
	* gdbtypes.c (address_space_name_to_int, address_space_int_to_name)
	(make_type_with_address_space, recursive_type_dump): Add address
	class support.
	* gdbtypes.h (TYPE_FLAG_ADDRESS_CLASS_1, TYPE_FLAG_ADDRESS_CLASS_2)
	(TYPE_FLAG_ADDRESS_CLASS_ALL, TYPE_ADDRESS_CLASS_1)
	(TYPE_ADDRESS_CLASS_2, TYPE_ADDRESS_CLASS_ALL): New defines

2002-10-16  Klee Dienes  <kdienes@apple.com>

	* stabsread.c (read_tilde_fields): Use name[sizeof(vptr_name)-2]