@@ -94,7 +94,7 @@ i[3456]86-ncr-*)	gdb_target=ncr3000 ;;
 # OBSOLETE i[3456]86-*-aix*)	gdb_target=i386aix ;;
 i[3456]86-*-bsd*)	gdb_target=i386bsd ;;
 i[3456]86-*-netbsd*)	gdb_target=nbsd ;;
-i[3456]86-*-openbsd*)	gdb_target=nbsd ;;	# FIXME: needs its own target
+i[3456]86-*-openbsd*)	gdb_target=obsd ;;
 # OBSOLETE i[3456]86-*-os9k)	gdb_target=i386os9k ;;
 i[3456]86-*-go32*)	gdb_target=i386aout ;;
 i[3456]86-*-msdosdjgpp*) gdb_target=go32 ;;
