@@ -1,3 +1,14 @@
+2002-10-20  Mark Kettenis  <kettenis@gnu.org>
+
+	* configure.tgt (i[3456]86-*-openbsd*): Set gdb_target to obds.
+	* config/i386/obsd.mt: New file.
+	* i386bsd-nat.c (_initialize_i386bsd_nat): Introduce
+	i386obsd_sc_pc_offset and i386obsd_sc_sp_offset;
+	* i386obsd-nat.c (_initialize_i386obsd_nat): Set
+	i386obsd_sigtramp_start and i386obsd_sigtramp_end instead of
+	i386nbsd_sigtramp_start and i386nbsd_sigtramp_end.
+	* i386obsd-tdep.c: New file.
+
 2002-10-19  Adam Fedor  <fedor@gnu.org>
 
 	* objc-exp.y (name_not_typename): Fix invalid comment.	
